fix invisible text when hovering on active button

--- a/aleph_modules/core/style.css
+++ b/aleph_modules/core/style.css
@@ -76,7 +76,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 .active:hover {
 	background-color: #757d80;
-	color: #737d80;
+	color: #060b0d;
 }
 
 .section {
